--- a/inventory.html
+++ b/inventory.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
     <title>Murphy Auto</title>
-		<link href="reset.css" rel="stylesheet"/>
-    <link  href="style.css" rel="stylesheet"/>
+		
 
           <!-- Bootstrap -->
       <!-- Latest compiled and minified CSS -->
@@ -15,16 +14,19 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+	  <link href="reset.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     
     <header>
-      <img src="Dealership Logo.png" height="100" align=left>
-      <p>4256 Virginia Beach Blvd</p>
-      <p>Virginia Beach, VA 23454</p>
-      <p>757-954-2412</p>
-
+      <img src="Dealership Logo.png"  height="125">
+      <div id="logoText" height="125">
+		<p>4256 Virginia Beach Blvd</p>
+		<p>Virginia Beach, VA 23454</p>
+		<p>757-954-2412</p>
+    </div>
+    
       <nav class="navbar navbar-inverse">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -52,14 +54,15 @@
     </header>
 
     <main>
-        <table class="table table-striped table-dark">
+      <div class="table-responsive">
+        <table class="table table-hover table-dark">
             <thead>
               <tr>
-                <th scope="col">Year</th>
-                <th scope="col">Make</th>
-                <th scope="col">Model</th>
-                <th scope="col">Color</th>
-                <th scope="col">Price</th>
+                <th scope="col" class="text-center">Year</th>
+                <th scope="col" class="text-center">Make</th>
+                <th scope="col" class="text-center">Model</th>
+                <th scope="col" class="text-center">Color</th>
+                <th scope="col" class="text-center">Price</th>
               </tr>
             </thead>
             <tbody>
@@ -170,9 +173,17 @@
               </tr>    
             </tbody>
           </table>
+        </div>
     </main>
 
     <footer>
+      <p style="text-align: left">&copy;	2019 ITD 210
+      <span style="float:right">
+      <img src="images/fblogo.png" height="25">
+      <img src="images/iglogo.png" height="25">
+      <img src="images/myspacelogo.png" height="25">
+      </span>
+      </p>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
